Bytte til proxy endepunkt (#118)
* Byttet fra ident-pool consumer til GenererNavnConsumer
* Fikset 401 feil og lagt ved valgfritt antall requestparam
* Lagt på sikkerhet mot generer-navn-service
* Lagt til PersonServiceConsumer for henting av aktoerId og fjernet avhengighet mot Aktoerregister
* Refaktorert en hel del, byttet til Webclient og ServerProperties
* Byttet til isBlank for sjekking av string
* Kodeverk kall gjennom nye KodeverkProxy og endret til Webclient og med sikkerhet
* Økt limit på maxInMemorySize for kodeverk kall
* Endret til å bruke Arenaforvalter proxy og dev-fss-pub endepunktet for kodeverk proxy
* Fikset tester og testoppsett for proxyer
* Byttet til proxy endepunkt og rettet opp i tester som var laget for restclient
* Byttet til intern ingress for kodeverk inntil backend er ute i GCP
* Byttet til intern ingress for resterende proxier inntil backend er ute i GCP
* Forbedret accesstoken header funksjonalitet og koblet til proxy for PDL-testdata og PDL-api
* Begynt å rette opp i tester
* Rettet opp i PdlForvalter tester
* Oppgradert Spring og fikset tester
* Fikset lokal kjøring av vault
* Disable generic på deploy dev
* Proxiet testnorge-aareg og skrevet om tester
* Rettet opp i consumere
* Satt opp proxying for PensjonForvalter
* Satt opp proxying for Sigrubstub
* Satt opp proxying for Skjermingsregister
* Satt opp tpsf proxy
* Rettet opp i feilende tester for tpsf
* Refaktoering og fornying til webclient og serverproperties
* Refaktorert litt på TPSF tester
* Proxy for UDI-stub
* Bruker endepunkt utenfor gcp
* Byttet sykemelding kall til å gå mot sykemelding-api-proxy
* Aareg proxy fix
* Statisk data forvalter proxy
* Oppgradering til Java 17
* Lagt til alive sjekking av de forskjellige consumerene og rettet opp i noe manglende Java 17 implementasjon
* Returnerer statuskode navn istedenfor ren kode dersom den er 2xx successful
* Endret til bruk av Records og noe fiks etter merge
* Endret siste command til R